Fix broken navigation menu on small devices.

--- a/src/less/_header_blog.less
+++ b/src/less/_header_blog.less
@@ -54,6 +54,12 @@
     font-size: 0px;
   }
 
+  &-navi-open {
+    .tablet-query({
+      display: block !important;
+    })
+  }
+
   &-navi-item {
     display: inline-block;
     position: relative;
